# rust-tracer

./: Cargo.toml  README.md  example-scene.yml  scene.yml
doc/: A Minimal Ray-Tracer_ Rendering Simple Shapes (Sphere, Cube, Disk, Plane, etc.) (Ray-Box Intersection).html
doc/A Minimal Ray-Tracer_ Rendering Simple Shapes (Sphere, Cube, Disk, Plane, etc.) (Ray-Box Intersection)_files/: sdk(1).js  sdk.js  widget_iframe.3c5aa8e2a38bbbee4b6d88e6846fc657.html
src/: coordinates.rs  drawing_2d.rs  main.rs  raytracer.rs
src/2d/: coordinates.rs
src/raytracer/: camera.rs  distant_light.rs  intersection.rs  line.rs  mod.rs  ray.rs  scene.rs  utils.rs
src/raytracer/shapes/: cuboid.rs  mod.rs  plane.rs  shape.rs  sphere.rs
