[package]
name = "rust-image"
version = "0.1.0"
authors = ["Barthélémy Gouby <barthelemy.gouby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
num-complex = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
typetag = "0.1"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
clap = "2.33.3"
rayon = "1.5.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
rand = "0.8.5"
rand_distr = "0.4.3"
